force-app/main/default/objects/Account/fields/ABN_ACN__c.field-meta.xml
<CustomField>
    <fullName>ABN_ACN__c</fullName>
    <label>ABN/ACN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>