force-app/main/default/objects/Account/fields/Accounts_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Accounts_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts 18 Digit Id</label>
    <type>Text</type>
</CustomField>