force-app/main/default/objects/Account/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <description>This email address does NOT sync into Autopilot automatically - this Organisation Account must have a Primary Contact linked by an Affiliation record in order to be sent emails via that Contact, using Autopilot</description>
    <inlineHelpText>This email address does NOT sync into Autopilot automatically - this Organisation Account must have a Primary Contact linked by an Affiliation record in order to be sent emails via that Contact, using Autopilot</inlineHelpText>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>