force-app/main/default/objects/Account/fields/Batch_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Batch_Error_Message__c</fullName>
    <label>Batch Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>