force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Tier A</fullName>
            </value>
            <value>
                <fullName>Tier B</fullName>
            </value>
            <value>
                <fullName>Tier C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>