force-app/main/default/objects/Account/fields/CHD_Directory_Record__c.field-meta.xml
<CustomField>
    <fullName>CHD_Directory_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate the Salesforce Contact/Account is a CoHD Directory record</description>
    <inlineHelpText>Checkbox to indicate the Salesforce Contact/Account is a CoHD Directory record</inlineHelpText>
    <label>CoHD Directory Record</label>
    <type>Checkbox</type>
</CustomField>