force-app/main/default/objects/Account/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field - this field is NOT synced with Autopilot - built to help with Org list management in Salesforce</description>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>