force-app/main/default/objects/Account/fields/Financial_Assistance_from_Task__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assistance_from_Task__c</fullName>
    <description>This is to help with the roll up field on the account for total financial assistance</description>
    <inlineHelpText>This is to help with the roll up field on the account for total financial assistance</inlineHelpText>
    <label>Financial Assistance from Task</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>