force-app/main/default/objects/Account/fields/In_Kind_Assistance_from_Task__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Assistance_from_Task__c</fullName>
    <description>This is to help with the roll up field on the account for total In Kind assistance</description>
    <inlineHelpText>This is to help with the roll up field on the account for total In Kindassistance</inlineHelpText>
    <label>In Kind Assistance from Task</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>