force-app/main/default/objects/Account/fields/Ischecked__c.field-meta.xml
<CustomField>
    <fullName>Ischecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ischecked</label>
    <type>Checkbox</type>
</CustomField>