force-app/main/default/objects/Account/fields/md_npsp_pack__Protect_Name__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Protect_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ensures the MoveData integration doesn&apos;t replace the Account name.</description>
    <label>[Deprecated] Protect Name</label>
    <type>Checkbox</type>
</CustomField>