force-app/main/default/objects/Account/fields/MOU__c.field-meta.xml
<CustomField>
    <fullName>MOU__c</fullName>
    <label>MOU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>