force-app/main/default/objects/Account/fields/MOU_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>MOU_Expiry_Date__c</fullName>
    <label>MOU Expiry Date</label>
    <type>Date</type>
</CustomField>