force-app/main/default/objects/Account/fields/No_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>No_Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Solicitation</label>
    <type>Checkbox</type>
</CustomField>