force-app/main/default/objects/Account/fields/No_Telemarketing__c.field-meta.xml
<CustomField>
    <fullName>No_Telemarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Telemarketing</label>
    <type>Checkbox</type>
</CustomField>