force-app/main/default/objects/Account/fields/Phone_Business__c.field-meta.xml
<CustomField>
    <fullName>Phone_Business__c</fullName>
    <label>Phone - Business</label>
    <type>Phone</type>
</CustomField>