force-app/main/default/objects/Account/fields/Phone_Landline__c.field-meta.xml
<CustomField>
    <fullName>Phone_Landline__c</fullName>
    <label>Phone - Landline</label>
    <type>Phone</type>
</CustomField>