force-app/main/default/objects/Account/fields/Phone_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Phone_Mobile__c</fullName>
    <label>Phone - Mobile</label>
    <type>Phone</type>
</CustomField>