force-app/main/default/objects/Account/fields/Previous_value_of_total_financial_assita__c.field-meta.xml
<CustomField>
    <fullName>Previous_value_of_total_financial_assita__c</fullName>
    <description>this is helping with the roll up of the value on the account</description>
    <inlineHelpText>this is helping with the roll up of the value on the account</inlineHelpText>
    <label>Previous value of total financial assita</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>