force-app/main/default/objects/Account/fields/Previous_value_of_total_In_Kind_assita__c.field-meta.xml
<CustomField>
    <fullName>Previous_value_of_total_In_Kind_assita__c</fullName>
    <label>Previous value of total In Kind assita</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>