force-app/main/default/objects/Account/fields/Primary_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>