force-app/main/default/objects/Account/fields/Salesforce_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_ID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <inlineHelpText>Unique ID for this Account record</inlineHelpText>
    <label>Salesforce Account ID</label>
    <type>AutoNumber</type>
</CustomField>