force-app/main/default/objects/Account/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <description>These are the services offered by this organisation</description>
    <inlineHelpText>These are the services offered by this organisation</inlineHelpText>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aboriginal and/or Torres Strait Islander Health Worker</fullName>
            </value>
            <value>
                <fullName>Adult CHD Surgery</fullName>
            </value>
            <value>
                <fullName>Adult Congenital Cardiology</fullName>
            </value>
            <value>
                <fullName>Art Therapy</fullName>
            </value>
            <value>
                <fullName>Audiology</fullName>
            </value>
            <value>
                <fullName>Cardiac Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Cardiac Surgery</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardiothoracic Surgery</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Dietetics</fullName>
            </value>
            <value>
                <fullName>Exercise Physiology</fullName>
            </value>
            <value>
                <fullName>General Practice</fullName>
            </value>
            <value>
                <fullName>Genetic Counselling</fullName>
            </value>
            <value>
                <fullName>Gynaecology</fullName>
            </value>
            <value>
                <fullName>Massage Therapy</fullName>
            </value>
            <value>
                <fullName>Midwifery</fullName>
            </value>
            <value>
                <fullName>Music Therapy</fullName>
            </value>
            <value>
                <fullName>Neonatology</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Obstetrics</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Optometry</fullName>
            </value>
            <value>
                <fullName>Osteopathy</fullName>
            </value>
            <value>
                <fullName>Paediatric Cardiology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>