force-app/main/default/objects/Account/fields/Soft_Credit_Total_Pre_2021__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Total_Pre_2021__c</fullName>
    <description>Total amount of Soft Credits carried over from eTapestry</description>
    <label>Soft Credit Total Pre 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>