force-app/main/default/objects/Account/fields/Strategic__GEM_Portal_Grant__c.field-meta.xml
<CustomField>
    <fullName>Strategic__GEM_Portal_Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GEM Portal Grant (Deprecated)</label>
    <referenceTo>Strategic__GEMPortal_Grants__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>