force-app/main/default/objects/Account/fields/Today_is_First_Day_of_CFY__c.field-meta.xml
<CustomField>
    <fullName>Today_is_First_Day_of_CFY__c</fullName>
    <description>Checkbox ticks if today is 1st July, regardless of year. Used in a Flow to clear the &apos;Total Fin Assist CFY&apos; field on the HH Account. Not on page layout.</description>
    <formula>AND(
MONTH(TODAY())=7,
DAY(TODAY())=1
)</formula>
    <label>Today is First Day of CFY</label>
    <type>Checkbox</type>
</CustomField>