force-app/main/default/objects/Account/fields/Total_Financial_Assistance_Provided__c.field-meta.xml
<CustomField>
    <fullName>Total_Financial_Assistance_Provided__c</fullName>
    <description>This is the total life time financial assistance provided to a family</description>
    <inlineHelpText>This is the total life time financial assistance provided to a family</inlineHelpText>
    <label>Total Financial Assistance Provided</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>