force-app/main/default/objects/Account/fields/Total_Financial_Assistance_Provided_new__c.field-meta.xml
<CustomField>
    <fullName>Total_Financial_Assistance_Provided_new__c</fullName>
    <description>Populated by Flow &apos;Task_After_Sum Total Fin Assis.’</description>
    <inlineHelpText>Total Financial Assistance Provided from all Tasks associated to all Household Contacts</inlineHelpText>
    <label>Total Financial Assistance Provided</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>