force-app/main/default/objects/Account/fields/Total_In_Kind_Assistance_Provided__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Kind_Assistance_Provided__c</fullName>
    <label>Total In Kind Assistance Provided</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>