force-app/main/default/objects/Account/fields/Total_In_Kind_Assistance_Provided_CFY__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Kind_Assistance_Provided_CFY__c</fullName>
    <description>Populated by Flow &apos;Case Total Assistance provided Calculation&apos;.</description>
    <inlineHelpText>Total In Kind Assistance Provided from Cases associated to all Household Contacts, where Due Date is Current Financial Yr</inlineHelpText>
    <label>Total In Kind Assistance Provided CFY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>