force-app/main/default/objects/Account/fields/webkul_wws__woo_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Company_Name__c</fullName>
    <externalId>true</externalId>
    <label>woo Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>