force-app/main/default/objects/Account/fields/webkul_wws__Woocommerce_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Woocommerce_Customer_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Woocommerce Customer Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>