force-app/main/default/objects/Account/validationRules/webkul_wws__Account_Insert_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>webkul_wws__Account_Insert_Rule</fullName>
    <active>false</active>
    <description>eShopSync woocommerce rule to prevent account insert from unauthorized sources.</description>
    <errorConditionFormula>OR(ISNULL(webkul_wws__eShopSync_Config__c), NOT(CONTAINS( webkul_wws__Woo_Customer_Id__c, webkul_wws__eShopSync_Config__r.webkul_wws__Store_Unique_Code__c )))</errorConditionFormula>
    <errorMessage>Syncing from this site not allowed.</errorMessage>
</ValidationRule>