force-app/main/default/objects/Account/listViews/MyOrganizations.listView-meta.xml
<ListView>
    <fullName>MyOrganizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CHD_Directory_Record__c</columns>
    <columns>CHD_Verification_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CHD_Directory_Record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Organizations</label>
</ListView>