force-app/main/default/objects/Account/listViews/npsp__AllAccounts.listView-meta.xml
<ListView>
    <fullName>npsp__AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>npo02__TotalOppAmount__c</columns>
    <columns>npo02__OppAmountLastNDays__c</columns>
    <columns>npo02__AverageAmount__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>